Fix issue with misaligned line numbers

--- a/system/application/views/widgets/mediaelement/prism.css
+++ b/system/application/views/widgets/mediaelement/prism.css
@@ -14,6 +14,7 @@ pre[class*="language-"] {
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
+	word-wrap: normal;
 
 
 	-moz-tab-size: 4;
